--- a/pom.xml
+++ b/pom.xml
@@ -827,6 +827,11 @@
 				<version>${jasperreports.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>net.sf.jasperreports</groupId>
+				<artifactId>jasperreports-pdf</artifactId>
+				<version>${jasperreports.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>joda-time</groupId>
 				<artifactId>joda-time</artifactId>
 				<version>${joda-time.version}</version>
